refactor: comprehensive project cleanup and organization
- Remove all test files and test directories
- Delete unused development tools (Playwright, Node.js configs)
- Clean up temporary files and build artifacts
- Remove duplicate and versioned HTML files (results-v2, v3, v4)
- Delete debugging and development utilities
- Remove obsolete email verification files
- Clean up CSS and documentation files
- Update .gitignore to ignore Eclipse metadata

Files removed:
- Test files: DatabaseTest.java, EmailSystemTest.java, etc.
- Playwright configs: package.json, playwright.config.js, tests/
- Development tools: *.bat, *.ps1, *FIX*, *TEST-RESULTS*
- Duplicate HTML: results-v2.html, results-standalone.html, etc.
- Debug files: email-debug.jsp, test-signup.html
- Documentation: docs/, *.md reports

Project now contains only essential production files.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>